Added openapi docs for unfollow endpoint
