# backend/recipes/delete/route.go
@@ -2,6 +2,18 @@ package recipes_delete
 
 import "github.com/gofiber/fiber/v2"
 
+// DeleteRecipeRoute handles the deletion of a user's recipe.
+// @Summary Delete a user's recipe
+// @Description Deletes a recipe for a user based on their ID and the recipe ID.
+// @Tags recipes
+// @Accept json
+// @Produce json
+// @Param recipe_id path string true "Recipe ID"
+// @Success 200 {object} interface{} "Recipe deleted successfully."
+// @Failure 400 {object} interface{} "Bad Request - Missing recipe ID."
+// @Failure 401 {object} interface{} "Unauthorized - User ID not found."
+// @Failure 404 {object} interface{} "Not Found - Recipe or user not found."
+// @Router /recipes/{recipe_id} [delete]
 func DeleteRecipeRoute(c *fiber.Ctx) error {
 	id := c.Params("recipe_id")
 
