# backend/recipes/get/route.go
@@ -2,6 +2,18 @@ package recipes_get
 
 import "github.com/gofiber/fiber/v2"
 
+// RecipeGetRoute handles the retrieval of a specific recipe.
+// @Summary Get a specific recipe
+// @Description Retrieves the details of a specific recipe for a user based on their ID and the recipe ID.
+// @Tags recipes
+// @Accept json
+// @Produce json
+// @Param recipe_id path string true "Recipe ID"
+// @Success 200 {object} interface{} "Recipe retrieved successfully."
+// @Failure 400 {object} interface{} "Bad Request - Missing recipe ID."
+// @Failure 401 {object} interface{} "Unauthorized - User ID not found."
+// @Failure 404 {object} interface{} "Not Found - Recipe or user not found."
+// @Router /recipes/{recipe_id} [get]
 func RecipeGetRoute(c *fiber.Ctx) error {
 	// Getting the ID
 	id := c.Params("recipe_id")
